--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Charging Quick</string>
     <string name="card">Enter your card number</string>
     <string name="recharge">recharge</string>
     <string name="inquire_balance">Inquire balance</string>
     <string name="contact_me">Contact me</string>
     <string name="settings">Settings</string>
+    <string name="idnumber">ID Number :</string>
+    <string name="wohcharging">Who Charging :</string>
+    <string name="network">Mobile Network :</string>
+    <string name="viewlive">View Live</string>
+    <string name="viewcode">See Code</string>
 </resources>
