تصميم شبه كامل حق الاعدادت

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,4 +11,5 @@
     <string name="network">Mobile Network :</string>
     <string name="viewlive">View Live</string>
     <string name="viewcode">See Code</string>
+    <string name="settings_icon">Settings</string>
 </resources>
