--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="network">الشبكة :</string>
     <string name="viewlive">العرض المباشر</string>
     <string name="viewcode">اظهر الكود</string>
+    <string name="settings_icon">الإعدادات</string>
+
 </resources>
