اضافة صور شركات الاتصال

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,4 +12,5 @@
     <string name="viewlive">View Live</string>
     <string name="viewcode">See Code</string>
     <string name="settings_icon">Settings</string>
+    <string name="save">Save</string>
 </resources>
