--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="viewlive">العرض المباشر</string>
     <string name="viewcode">اظهر الكود</string>
     <string name="settings_icon">الإعدادات</string>
-
+    <string name="save">حفظ</string>
 </resources>
