--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,4 +14,6 @@
     <string name="settings_icon">Settings</string>
     <string name="save">Save</string>
     <string name="noneNetwork">Did not specify type of the slide</string>
+    <string name="noneIDumber">None ID Number</string>
+    <string name="noneCardNum">Card number very short</string>
 </resources>
