--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="save">حفظ</string>
     <string name="noneNetwork">لم تحدد نوع الشريحة</string>
     <string name="noneIDumber">لا يوجد رقم هوية</string>
-    <string name="noneCardNum">رقم البطاقة قصير جداً</string>
+    <string name="CardNumShort">رقم البطاقة قصير جداً</string>
+    <string name="noneCardNum">لا يوجد رقم بطاقة</string>
+    <string name="IDNumIncorrect">رقم الهوية غير صحيح</string>
 </resources>
